www/www-util.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: www-util
spec:
  selector:
    app: www-util
  ports:
  - port: 80
    targetPort: 8000
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: www-util
spec:
  selector:
    matchLabels:
      app: www-util
  replicas: 2
  template:
    metadata:
      labels:
        app: www-util
    spec:
      containers:
      - name: www-util
        image: registry.digitalocean.com/registry-carbon-cc/www-util:v0.0.2
        ports:
        - containerPort: 8000
